// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonFacet is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonFacet euiButtonFacet--unSelected testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonFacet__content"
  >
    <span
      class="euiButtonFacet__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonFacet props icon is rendered 1`] = `
<button
  class="euiButtonFacet euiButtonFacet--unSelected"
  type="button"
>
  <span
    class="euiButtonFacet__content"
  >
    <svg
      class="euiIcon euiIcon--medium euiButtonFacet__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xlink="http://www.w3.org/1999/xlink"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <circle
          cx="8"
          cy="8"
          id="dot-a"
          r="4"
        />
      </defs>
      <use
        href="#dot-a"
      />
    </svg>
    <span
      class="euiButtonFacet__text"
    />
  </span>
</button>
`;

exports[`EuiButtonFacet props isDisabled is rendered 1`] = `
<button
  class="euiButtonFacet euiButtonFacet--unSelected"
  disabled=""
  type="button"
>
  <span
    class="euiButtonFacet__content"
  >
    <span
      class="euiButtonFacet__text"
    />
  </span>
</button>
`;

exports[`EuiButtonFacet props isLoading is rendered 1`] = `
<button
  class="euiButtonFacet euiButtonFacet--unSelected"
  disabled=""
  type="button"
>
  <span
    class="euiButtonFacet__content"
  >
    <span
      class="euiButtonFacet__text"
    />
    <div
      class="euiLoadingSpinner euiLoadingSpinner--medium euiButtonFacet__spinner"
    />
  </span>
</button>
`;

exports[`EuiButtonFacet props isSelected is rendered 1`] = `
<button
  class="euiButtonFacet euiButtonFacet--isSelected"
  type="button"
>
  <span
    class="euiButtonFacet__content"
  >
    <span
      class="euiButtonFacet__text"
    />
  </span>
</button>
`;

exports[`EuiButtonFacet props quantity is rendered 1`] = `
<button
  class="euiButtonFacet euiButtonFacet--unSelected"
  type="button"
>
  <span
    class="euiButtonFacet__content"
  >
    <span
      class="euiButtonFacet__text"
    />
    <span
      class="euiNotificationBadge euiButtonFacet__quantity"
    >
      60
    </span>
  </span>
</button>
`;
